finish study group

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 </head>
 <body>
     <div id="outer-node">
-        <div>
-            <div>
+        <div class="divs">
+            <div class="divs">
                 <h1>Internet Memes</h1>
             </div>
         </div>
     </div>
-    <div id=other></div>
+    <div id=other class="divs"></div>
     <div id="container">
         <p>Add Images Here</p>
         <!-- <img src=""> -->
     </div>
 
     <script src="src/memes.js"></script>
+    <script src="src/index.js"></script>
 </body>
 </html>
